<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary"
    >     <!-- tools:context=".LoginActivity": hace referencia a nuestra clase java quien manejara esta vista -->

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="1"
       >

       <!-- android:layout_weight="0.6": con esta propiedad le indicamos cual es el peso que quiero darle
        este layout sera tan grande que sobre 0.6. El tamaño maximo esta definido en el padre.
        android:weightSum="1"
        -->

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.6"
           >

           <ImageView
               android:id="@+id/logo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:background="@drawable/platzigram"
               />

       </RelativeLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.4"
           android:orientation="vertical"
           >

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:theme="@style/EditTextWhite"
               >

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/username"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_username"
                   />

           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/hint_password"
                   android:inputType="textPassword"
                   />

           </android.support.design.widget.TextInputLayout>

           <Button
               android:id="@+id/login"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/text_button_login"
               android:theme="@style/RaisedButtonDark"
               android:onClick="goToContainer"
               />

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center">

               <TextView
                   android:id="@+id/dontHaveAccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/dont_have_account"
                   android:textColor="@android:color/white"
                   android:textStyle="bold"
                   android:textSize="@dimen/textsize_donthaveaccount"
                   />
               <TextView
                   android:id="@+id/createHere"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/create_here"
                   android:textColor="@android:color/white"
                   android:textStyle="bold"
                   android:textSize="@dimen/textsize_donthaveaccount"
                   android:layout_toRightOf="@id/dontHaveAccount"
                   android:onClick="goCreateAccount"
                   />


           </RelativeLayout>


       </LinearLayout>

   </LinearLayout>

</android.support.design.widget.CoordinatorLayout>